<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_borders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rep_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/found_error"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/rep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/error_reporting"
            android:textColor="@color/dialogColorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/copy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/copy_email"
            android:textColor="@color/dialogColorText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/email"
            android:textColor="#A13C3C"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_warn_dialog_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/urbanist_font"
                android:text="@string/ok"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:strokeWidth="3dp" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>