<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_borders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/inf_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/crosspost"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/information_title"
            android:textColor="@color/dialogColorText"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_exit_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/logout" />

                <TextView
                    android:id="@+id/info_exit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/urbanist_font"
                    android:text="@string/information_exit"
                    android:textColor="@color/dialogColorText"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_add_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/add_user" />

                <TextView
                    android:id="@+id/info_add_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/urbanist_font"
                    android:text="@string/information_add"
                    android:textColor="@color/dialogColorText"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_post_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/direct" />

                <TextView
                    android:id="@+id/info_post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/urbanist_font"
                    android:text="@string/information_post"
                    android:textColor="@color/dialogColorText"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_img_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/plus" />

                <TextView
                    android:id="@+id/info_img_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/urbanist_font"
                    android:text="@string/information_img"
                    android:textColor="@color/dialogColorText"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/info_warn_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="2dp"
                    app:srcCompat="@drawable/warning" />

                <TextView
                    android:id="@+id/info_warn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/urbanist_font"
                    android:text="@string/information_warn"
                    android:textColor="@color/dialogColorText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_dialog_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/urbanist_font"
                android:text="@string/ok"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:strokeWidth="3dp" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>