<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_borders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rep_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/telegram"
            android:textColor="#2F6997"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/rep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/insert_channel"
            android:textColor="@color/dialogColorText"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />


        <EditText
            android:id="@+id/type_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:fontFamily="@font/urbanist_font"
            android:inputType="textPersonName"
            android:text="@string/type_here"
            android:textColor="@color/colorBlack" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/urbanist_font"
                android:text="@android:string/cancel"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:strokeWidth="3dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/urbanist_font"
                android:text="@string/ok"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:strokeWidth="3dp" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>