<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/falling_stars" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="100dp"
                    app:srcCompat="@drawable/stars" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/not_logged_in" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/oops"
                android:textColor="@color/colorBlack"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/you_are_not_auth"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="3"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startPageVkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:text="@string/vk"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:fontFamily="@font/urbanist_font"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/inst_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:text="@string/facebook"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:fontFamily="@font/urbanist_font"
                    app:strokeWidth="3dp" />

            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:clickable="false"
                android:enabled="false"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/urbanist_font"
                android:text="@string/telegram_soon"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:strokeWidth="3dp" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/warning_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/warning"
        android:scaleX="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>